[package]
name = "rgbt"
version = "0.1.0"
authors = ["oatiz <zeshawnetq@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
anyhow = "1.0.32"
structopt = "0.3.16"
log = "0.4.11"
fern = { version = "0.6.0", features = ["colored"] }
once_cell = "1.4.0"
chrono = "0.4.13"

